(executable
 (name server)
 (public_name server)
 (libraries
  common_native
  dream
  server-reason-react.url_native
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.html
  server-reason-react.js
  lwt.unix
  str
  unix
  server-reason-react.belt
  yojson)
 (preprocess
  (pps
   server-reason-react.browser_ppx
   server-reason-react.ppx
   server-reason-react.melange_ppx
   melange-json-native.ppx
   lwt_ppx))
 (modes native))

(copy_files
 (files "../../ui/src/*.re"))

(include_subdirs qualified)
